--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
     <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/landingstyle.css">
 </head>
-<body style="background-image:url(assets/images/wood.jpg); background-repeat: no-repeat; height: 100%; width: 100%; background-size: cover;">
-    <div class="container">
+<body style="background-image:url(assets/images/chalk.jpg); background-repeat: no-repeat; height: 100%; width: 100%; background-size: cover;">
+
+    
+    <div class="container">    
+
         <div uk-grid>
             <div class="uk-card uk-card-default uk-card-body uk-margin-auto uk-width-auto" id="landingDiv">
                 <h3 class="uk-card-title">HopStop</h3> <hr>
