--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="beerImage">
-            <img src="assets/images/beers.png" alt="Beer Image">
+            <img src="assets/images/beerhopcolor.jpg" alt="Beer Image">
 
     </div>
     <!-- Cover Image with Search Bars inside  -->
